# rust_const_rkyv_bug

./: Cargo.toml
src/: main.rs
subcrate/: Cargo.toml
subcrate/src/: lib.rs  main.rs
