[package]
name = "disp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2.0"
logos = "0.12.0"
multihash = "0.16.1"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"

subcrate = { path = "subcrate/" }
rkyv = { version = "0.7.31" }

[workspace.metadata.nix]
nativeBuildInputs = [
	"cargo-edit",
]
buildInputs = []
toolchain = "nightly"
devshell = {name = "rust-dev-shell" }

[package.metadata.nix]
app = true
build = true
