[package]
name = "rust_cargo_rkyv_bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subcrate = { path = "subcrate/" }
rkyv = "0.7.31"

[workspace.metadata.nix]
nativeBuildInputs = [
	"cargo-edit",
]
buildInputs = []
toolchain = "nightly"
devshell = {name = "rust-dev-shell" }

[package.metadata.nix]
app = true
build = true
